# substrate

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  compile_commands.json  pixi.toml  pyproject.toml  utils.cmake
.devcontainer/: Dockerfile  devcontainer.json
apps/: CMakeLists.txt
apps/matching_engine/: main.cpp
cmake/: external.cmake  includes.cmake  utils.cmake
include/: CMakeLists.txt
include/substrate/: application.h  cancel_order.h  common_types.h  limit_order_book.h  logging.h  matching_engine.h  message_helpers.h  messages.h  new_order.h  order.h  order_book.h  order_queue.h  order_types.h  price.h  protocol.h  replace_order.h  substrate.h  timestamp.h  utilities.h  wrapped_type.h
include/substrate/responses/: execution.h  trade_id.h
protocol/sbe/: common-types.xml  substrate.xml
python/examples/: replay.py
python/experimental/fill/: .gitignore  Makefile  README.md  pyproject.toml
python/experimental/fill/lab/rl/: README.md
python/experimental/fill/lab/rl/apps/: __init__.py  sb3_ppo_exec.py  sb3_sac_alloc.py
python/experimental/fill/lab/rl/experiments/: alloc_risk_reward.toml  exec_reward_ablation.toml
python/experimental/fill/lab/rl/notebooks/: alloc_analysis.ipynb  exec_analysis.ipynb
python/experimental/fill/lab/rl/src/agents/: custom_policy.py
python/experimental/fill/lab/rl/src/baselines/: almgren_chriss.py  bh_mom_rev.py  twap_vwap.py
python/experimental/fill/lab/rl/src/envs/: alloc_env.py  exec_env.py
python/experimental/fill/lab/rl/src/eval/: metrics.py
python/experimental/fill/lab/rl/src/utils/: data.py  data_alt.py  data_seed.py
python/nb/jupyter/: fill_simulator.ipynb
python/nb/marimo/: fill_simulator.py  liquidity_screener.py
python/substrate/: README.md  data_loader.py  data_utils.py  event_consumer.py  fill_simulator.py  messages.py  replay_engine.py  replay_stats.py  schema.py  symbology.py  types.py
python/substrate/md/: data_bento.py  md_base.py  snapshot.py
python/tests/: test_event_consumer.py  test_fill_simulator.py  test_replay.py  test_replay_engine.py  test_replay_stats.py
python/tools/: convert_databento.py  fetchdata.py
scripts/: build.sh
src/: CMakeLists.txt  string_helpers.cpp  string_helpers.h  utils.cpp  utils.h  version.h.in
tests/: CMakeLists.txt  test_default.cpp  test_limit_order_book.cpp  test_lob.cpp  test_messages.cpp  test_order_book.cpp  test_order_queue.cpp  test_price.cpp
tests/mocks/: mock_logger.cpp  mock_logger.h
