[project]
name = "fill"
description = "FInance Laboratory for Learning"
version = "0.1.0"

[tool.ruff]
line-length = 79

[tool.ruff.lint]

[tool.ruff.format]
quote-style = "single"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64"]

[tool.pixi.dependencies]
python = ">=3.13"
ruff = ">=0.14.14,<0.15"
pytorch = ">=2.10.0,<3"
polars = ">=1.37.1,<2"
jupyterlab = ">=4.5.3,<5"
marimo = ">=0.19.7,<0.20"
numpy = ">=2.4.1,<3"
pandas = ">=3.0.0,<4"
gymnasium = ">=1.2.3,<2"
matplotlib = ">=3.10.8,<4"
stable-baselines3 = ">=2.7.1,<3"
yfinance = ">=0.2.57,<2"
pyyaml = ">=6.0.3,<7"
pyarrow = ">=23.0.0,<24"
fastparquet = ">=2025.12.0,<2026"

[tool.pixi.tasks]

[tool.pixi.tasks.train_exec]
cmd = [
    "python",
    "-mlab.rl.apps.sb3_ppo_exec",
    "--config=lab/rl/experiments/exec_reward_ablation.toml",
]
env = { PYTHONPATH = ".:./lab/rl/src" }

[tool.pixi.tasks.train_alloc]
cmd = [
    "python",
    "-mlab.rl.apps.sb3_sac_alloc",
    "--config=lab/rl/experiments/alloc_risk_reward.toml",
]
env = { PYTHONPATH = ".:./lab/rl/src" }

[tool.pixi.tasks.launch-jupyter]
cmd = [
    "python",
    "-mjupyterlab",
    "--no-browser",
    "--ip=0.0.0.0",
    "--autoreload",
    "--IdentityProvider.token=''",
    "--ServerApp.token=''",
    "--ServerApp.password=''",
]
